<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeasureActivity" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="66dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bg" >

        <TextView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/icon"
            android:textColor="#ffffffff"
            android:textSize="28.0dip" />

        <TextView
            android:id="@+id/logmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/icon"
            android:text="@string/automark"
            android:textColor="#ffffffff"
            android:textSize="22.0dip" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_alignParentBottom="true"
        android:background="#ffd5d5d5"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/startBn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/start" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/saveBn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/save" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/resetBn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/reset" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <!-- 定义一个MapView,注意apiKey必须是用户自己申请的 -->

    <com.google.android.maps.MapView
        android:id="@+id/mv"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/main_bottom"
        android:layout_below="@id/title"
        android:apiKey="0SaJpnKZci2vicLHu7-dSGL080QMml-QslS-gNQ"
        android:clickable="true"
        android:enabled="true" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
        android:text="@string/distance"
        android:textColor="#c0ae113d"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/distance"
        android:layout_marginLeft="10dip"
        android:text="@string/area"
        android:textColor="#c0ae113d"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>