<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="66dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bg" >

        <TextView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/icon"
            android:textColor="#ffffffff"
            android:textSize="28.0dip" />

        <TextView
            android:id="@+id/logmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/icon"
            android:text="@string/historytitle"
            android:textColor="#ffffffff"
            android:textSize="22.0dip" />
    </RelativeLayout>

    <ListView
        android:id="@+id/simpleList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:cacheColorHint="#ff000000"
        android:choiceMode="singleChoice" />

    <TextView
        android:id="@+id/nohistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/nohistory"
        android:textColor="#ff3c3c3c"
        android:textSize="15sp"
        android:visibility="gone" />

</RelativeLayout>