<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="100dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/appname"
            android:textColor="#ffffffff"
            android:textSize="24.0dip" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/title"
        android:layout_margin="20dip"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/start"
            android:layout_width="fill_parent"
            android:layout_height="80dip"
            android:onClick="startMeasure" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/startmeasure"
                android:textColor="#ff565656"
                android:textSize="22.0dip" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/pline" >
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/history"
            android:layout_width="fill_parent"
            android:layout_height="80dip"
            android:onClick="startHistory" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/history"
                android:textColor="#ff565656"
                android:textSize="22.0dip" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/pline" >
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/set"
            android:layout_width="fill_parent"
            android:layout_height="80dip"
            android:onClick="startSet" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/set"
                android:textColor="#ff565656"
                android:textSize="22.0dip" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/pline" >
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>